# token-scavenger

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  check_js.js  debug.css  patch.py  tailwind.config.js  test_format  test_format.rs  tmp_ui.html  tmp_ui_new.html
.cargo/: audit.toml
.dev/: WebsiteConcept.html  implementation-api-ui-and-data.md  implementation-architecture.md  implementation-providers-and-routing.md  implementation-quality-and-delivery.md  implementation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-05-02_120400-release-process.md
bench-results/: benchmark-results.md  load-test-results.json
benches/: benchmarks.rs
deploy/kubernetes/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
docs/: README.md  configuration.md  deployment.md  getting-started.md  index.html  package.json  pnpm-lock.yaml  provider-matrix.md  style.css  tailwind.config.js  tsconfig.json
docs/src/: index.css  main.js  main.ts
documentation/: api-behavior.md  configuration.md  deployment.md  getting-started.md  provider-matrix.md
examples/: load_test.rs
monitoring/: grafana-dashboard.json  prometheus-alerts.yml
packaging/homebrew/: tokenscavenger.rb
scratch/: test_usage.rs
scripts/: build-ui.sh  changelog_release.py  release.sh
src/: lib.rs  main.rs  projects.rs  update.rs
src/api/: auth.rs  error.rs  middleware.rs  mod.rs  routes.rs
src/app/: mod.rs  shutdown.rs  startup.rs  state.rs
src/cli/: config_cmd.rs  mod.rs  service.rs  setup.rs
src/config/: env.rs  loader.rs  mod.rs  overrides.rs  schema.rs  validation.rs
src/db/: models.rs
src/discovery/: curated.rs  merge.rs  mod.rs  model_intelligence.rs  refresh.rs
src/metrics/: mod.rs  prometheus.rs  tracing.rs
src/observability/: mod.rs
src/providers/: google.rs  groq.rs  http.rs  local.rs  (+6 more)
tests/: e2e.rs  integration.rs  migration.rs
(+40 files in other folders)
